created some services

--- a/first/src/app/nav/nav.component.css
+++ b/first/src/app/nav/nav.component.css
@@ -19,3 +19,17 @@ a{
     font-size: 26px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.info-container{
+    margin: 10px 30px;
+    padding: 10px 30px;
+}
+.btn{
+    width: 120px;
+    height: 35px;
+    border: none;
+}
+.btn-notice{
+    margin: 10px 30px;
+    background-color: #F5B041;
+}
