--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -1,3 +1,24 @@
 .wrapper{
     background-color: #FDEBD0;
 }
+.container{
+    width: 640px;
+    margin: 30px auto;
+    padding: 20 px 30px;
+    background-color: #f7f7f7;
+    font-family: 'Lucida Sans';
+}
+.user-div{
+    display: flex;
+    margin: 5px 0px;
+}
+.user-name{
+    width: 80%;
+    padding: 10px 30px;
+    background-color: #eee;
+}
+.user-status{
+    width: 20%;
+    padding: 10px 40px;
+    background-color: #FAD8D8;
+}
