--- a/first/src/app/app.component.html
+++ b/first/src/app/app.component.html
@@ -1,3 +1,10 @@
 <div class="wrapper">
     <app-container></app-container>
 </div>
+<div class="container">
+    <app-adduser></app-adduser>
+    <div class="user-div" *ngFor="let u of users">
+        <div class="user-name">{{ u.name }}</div>
+        <div class="user-status">{{ u.status }}</div>
+    </div>
+</div>
