--- a/first/src/app/nav/nav.component.html
+++ b/first/src/app/nav/nav.component.html
@@ -29,3 +29,23 @@
 <div [appStyle]="{backgroundColor: active ? 'Green' : 'Red', color: 'brown', 'font-weight': '900'}">
     <p>Hello</p>
 </div>
+
+<button class="btn btn-notice" (click)="DisplayNotice()">Show notice</button>
+<div class="info-container notice" *appIf="display">
+    <h3>This is important notice!</h3>
+    <p>This is a notice issued for all website users</p>
+</div>
+
+<p *appIf="10 < 5">this is a demo</p>
+
+<!-- <ng-template #nope>
+    <p>this is an example paragraph</p>
+</ng-template> -->
+
+<div class="container" [ngSwitch]="occupation">
+    <p *ngSwitchCase="'teacher'">This paragraph will be displayed when occupation is teacher</p>
+    <p *ngSwitchCase="'designer'">This paragraph will be displayed when occupation is designer</p>
+    <p *ngSwitchCase="'lawyer'">This paragraph will be displayed when occupation is lawyer</p>
+    <p *ngSwitchDefault>This paragraph is default and will be display if no case matches switch expression</p>
+</div>
+
