--- a/first/src/app/products/products.component.html
+++ b/first/src/app/products/products.component.html
@@ -19,7 +19,7 @@
                     </div>
                 </div>
                 <div class="options">
-                    <button class="btn btn-success">Show Details</button>
+                    <button class="btn btn-success" (click)="OnEnroll()">Show Details</button>
                     <button class="btn btn-warning" *ngIf="p.available === 'Available'; else notifyme">Buy Now</button>
                     <ng-template #notifyme>
                         <button class="btn btn-danger">Notify me</button>
